--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "parcel": "^2.12.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6"
+  },
+  "dependencies": {
+    "postcss-cli": "^11.0.0"
   }
 }
