--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "source": "index.html",
   "version": "1.0.0",
   "scripts": {
-    "dev": "parcel",
+    "dev": "parcel index.html journal.html",
     "build": "parcel build"
   },
   "keywords": [],
@@ -15,5 +15,8 @@
     "parcel": "^2.12.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6"
+  },
+  "dependencies": {
+    "postcss-cli": "^11.0.0"
   }
 }
