--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "parcel index.html journal.html",
-    "build": "parcel build"
+    "build": "parcel build",
+    "clean": "rm -rf .parcel-cacherm -rf dist"
   },
   "keywords": [],
   "author": "",
