--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "parcel": "^2.12.0",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6"
+    "postcss": "^8.4.40",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.7"
   },
   "dependencies": {
-    "postcss-cli": "^11.0.0"
+    "postcss-cli": "^11.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1"
   }
 }
